# datasphere_generator_dbt

./: .gitignore  README.md  cli.py  consulta.py  logger.py  main.py  pyproject.toml
datasphere/: README.md
datasphere/datasphere_extractor/: __init__.py  connection.py  extractor.py
exemplos/: bseg.sql  bseg.yml  datasphere_utils.sql  knkk.sql  knkk.yml
output/contracts/ddic/: ddic_schema_bseg.json  ddic_schema_bsid.json  ddic_schema_mara.json
output/contracts/pipeline/: ingestor_pipeline_bseg.json  ingestor_pipeline_bsid.json  ingestor_pipeline_mara.json
output/dbt/models/staging/: schema.yml  stg_sap_mara.sql
output/dbt/models/staging/BSEG/: stg_sap_bseg.sql  stg_sap_bseg.yml
output/dbt/models/staging/BSID/: stg_sap_bsid.sql  stg_sap_bsid.yml
output/dbt/models/staging/MARA/: stg_sap_mara.sql  stg_sap_mara.yml
output/dbt/models/staging/bseg/: bseg.sql  bseg.yml
sap_generator/: __init__.py
sap_generator/dbt_generator/: __init__.py  generator.py
sap_generator/ddic_extractor/: __init__.py  extractor.py  queries.py
sap_generator/ingestor/: __init__.py  translator.py
