[project]
name = "datasphere-extractor"
version = "0.1.0"
description = "Módulo modular e resiliente para extração de dados em chunks do SAP Datasphere."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Horácio Biancardi" }
]
dependencies = [
    "hdbcli>=2.19.21",
    "sqlalchemy>=2.0.0",
    "pandas>=2.2.0",
    "tenacity>=8.2.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy-hana>=4.6.0",
    "pyyaml>=6.0.0",
]

[tool.uv]
managed = true
package = true


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["datasphere_extractor", "sap_generator"]
